testsuite/tests/properties/invalid_bind/valid.lkt
import common

class BazNode: FooNode {
    @with_dynvars(dyn_node1)
    fun conv_prop(): Entity[FooNode] =
        dyn_node1.as_bare_entity
}
